# elasticsearch_agent

./: .agent.md  .env.template  .gitignore  GEMINI_MIGRATION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_REVIEW.md  README.md  SETUP.md  SETUP_OLD.md  Techstack.md  docker-compose.yml  google-genai-doc.md  plan.md  techstack.md
.cursor/rules/: basics.mdc
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/agents/: elasticsearch_agent.py
backend/app/api/: routes.py  websocket.py  websocket_old.py
backend/app/core/: config.py  constants.py  dependencies.py  exceptions.py  middleware.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  chart_recommendation.py  elasticsearch.py  gemini.py  query_intelligence.py  redis.py  vector_db.py
backend/app/utils/: logging.py  sample_data.py
backend/scripts/: ingest_sample_data.py  ingest_sample_data_fixed.py  test_chart_recommendations.py  test_gemini.py  test_intelligence_system.py  test_new_gemini.py  test_vector_db.py
backend/tests/: __init__.py  conftest.py  test_edge_cases.py
backend/tests/unit/: test_config.py
docs/: EDGE_CASES.md  ENVIRONMENT.md  ENVIRONMENT_MIGRATION.md  GEMINI_API_MIGRATION.md  PHASE_2_INTELLIGENCE.md  PROJECT_STRUCTURE.md
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  IntelligenceInsights.tsx  StatusIndicator.tsx
frontend/src/hooks/: useApi.ts  useChart.ts  useConnectionStatus.ts  useSession.ts  useWebSocket.ts  (+1 more)
scripts/: setup-env.sh
(+9 files in other folders)
