[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "chromadb>=0.4.0",
    "elasticsearch>=8.0,<9.0",
    "fastapi>=0.115.13",
    "google-genai>=1.21.1",
    "langgraph>=0.4.8",
    "numpy>=1.24.0",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest-asyncio>=1.0.0",
    "redis>=6.2.0",
    "sentence-transformers>=2.2.0",
    "uvicorn>=0.34.3",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
